Improved URL building, added logging to the plugin